[tool.poetry]
name = "btcrecover"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "2.7.18"
pylibscrypt = "^1.8.0"
scrypt = "^0.8.17"
protobuf = "^3.14.0"
pycryptodome = "^3.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
